@@ -459,3 +459,8 @@
   - In order to support automatic device creation (coming 98_autocreate.pm),
     the return value in case of an undefined device should contain parameters
     for a correct define statement.
+
+- Fri Jan  1 2010
+  - my %defptr is no $modules{modname}{defptr} in order for CommandReload to
+    work. There is also a second parameter $modules{modname}{ldata} which will
+    be saved over a Reload, used by the FS20 for the follow feature.
